# cvwrap

./: CMakeLists.txt  README.md  bindingio.h  common.h  cvWrapCmd.cpp  cvWrapCmd.h  cvWrapDeformer.cpp  cvWrapDeformer.h  pluginMain.cpp
include/maya/: MOpenCLAutoPtr.h  MOpenCLBuffer.h  MOpenCLInfo.h
